--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieGuessCS" : "Server=(localdb)\\MovieGuessDB;Database=MovieGuessDB"
+    "MovieGuessCS" : "Server=(localdb)\\MovieGuessDB_New;Database=MovieGuessDB_New"
   }
 }
